# prometheus-site

./: .codex-home-lighthouse.json  .codex-lighthouse-home.json  .codex-tmp-home-lh.json  .dockerignore  .editorconfig  .env.core.example  .env.example  .env.full.example  .gitattributes  .gitignore  .lefthook.yml  .lh-home-columns1.json  .lh-home-columns2.json  .lh-home-columns3.json  .lh-home-current1.json  .lh-home-current2.json  .lh-home-current3.json  .lh-home-current4.json  .lh-home-flex1.json  .lh-home-intro1.json  .lh-home-intro2.json  .lh-home-intro3.json  .lh-home-mobile1.json  .lh-home-post1.json  .lh-home-post2.json  .lh-home-post3.json  .lh-home-run1.json  .lh-home-run2.json  .lh-home-run3.json  .lh-home-split1.json  .lighthouseci-home-split-trace-0.devtoolslog.json  .lighthouseci-home-split-trace-0.trace.json  .lighthouseci-home-split-trace.json  .lighthouseci-home-trace-0.devtoolslog.json  .lighthouseci-home-trace-0.trace.json  .lighthouseci-home-trace.json  .oxfmtrc.json  .oxlintrc.json  .tmp-current-home.html  .tmp-current-login.html  (+41 more)
.codex-artifacts/: lh-perf.json
.codex-lighthouse/: report.html  report.json
.codex-lighthouse-final/: report.html  report.json
.codex-temp/: lh-provided.json  lh1.json  lh2.json  lh3.json  lh4.json
.githooks/: pre-commit  (+1 more)
apps/tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.base.json  tauri.conf.dev.json  tauri.conf.json  tauri.conf.prod.json
apps/tauri/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/tauri/src-tauri/src/: lib.rs  main.rs  menu.rs  tray.rs
apps/tauri/src-tauri/src/commands/: background.rs  mod.rs  native_ui.rs  privacy.rs  review.rs  update.rs
(+1657 files in other folders)
