[package]
name = "prometheus-site"
version = "0.1.0"
description = "Prometheus Tauri app shell"
edition = "2021"

[lib]
name = "prometheus_site_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-shell = "2.3.5"

[package.metadata.tauri-winres]
ProductName = "Prometheus"
OriginalFilename = "Prometheus.exe"
FileDescription = "Prometheus Tauri app shell"
