[package]
name = "prometheus-site"
version = "0.1.0"
description = "Prometheus Tauri app shell"
edition = "2021"

[lib]
name = "prometheus_site_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = "0.23"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
tauri = { version = "2.10.2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-updater = "2.10.0"

[package.metadata.tauri-winres]
ProductName = "Prometheus"
OriginalFilename = "Prometheus.exe"
FileDescription = "Prometheus Tauri app shell"
